# python3-hemoglobin

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: publish.yml  python3.yml  test.yml
hemoglobin/: __main__.py  files.py  grammarbot.py  hemoglobin.py
samples/: example.txt  long_1000c.txt
scripts/: hemoglobin
tests/: test_files.py  test_grammarbot.py  test_hemoglobin.py  test_main.py
