[project]
name = "python3-hemoglobin"
version = "0.0.11"
description = "A CLI wrapper for GrammarBot so it can be used from CI/CD pipelines "
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["grammarbot>=0.2.0", "python-mimeparse>=2.0.0"]

[dependency-groups]
dev = ["bandit>=1.9.2", "black>=25.12.0", "isort>=7.0.0"]
