[project]
name = "python3-hemoglobin"
description = "A CLI wrapper for GrammarBot so it can be used from CI/CD pipelines "
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["grammarbot>=0.2.0", "python-mimeparse>=2.0.0"]
dynamic = ["version"]                                                                # Important: tells tools the version isn't static

[dependency-groups]
dev = [
    "bandit>=1.9.2",
 "black>=25.12.0",
 "hatchling>=1.28.0",
 "isort>=7.0.0",
]

[build-system]
# Tell uv to use hatchling as the builder
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"             # VCS = Version Control System (Git)
fallback-version = "0.0.0" # <--- Add this line

[tool.hatch.version.raw-options]
local_scheme = "no-local-version" # Ensures clean versions like 1.0.1

[tool.hatch.build.targets.wheel]
packages = ["python3_hemoglobin"]
